Fix some layout bugs

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -32,6 +32,11 @@ mark{
   font-family: 'AT Surt', Helvetica, sans-serif;
 }
 
+.main-text-title h3{
+  font-size: 1.5rem;
+  overflow-x: auto;
+}
+
 .etichetta {
   height: 40;
   fill: #FC9E4F;
